# LD50

./: Cargo.toml  LICENSE  README.md
assets/: 64.aseprite  LifeTile.aseprite  ship.aseprite
bevy_pixel_camera/: Cargo.toml  README.md
bevy_pixel_camera/examples/: flappin.rs  mire.rs
bevy_pixel_camera/src/: lib.rs  pixel_border.rs  pixel_camera.rs  pixel_plugin.rs
game_plugin/: Cargo.toml
game_plugin/src/: lib.rs
game_plugin/src/components/: collision_body.rs  mod.rs  player.rs  velocity.rs
src/: main.rs
