[package]
name = "ld_50"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6" }
bevy-inspector-egui = { version = "0.8", optional = true }
bevy_kira_audio = "0.8"
