[package]
name = "ld_50"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["game_plugin/debug", "bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6" }
bevy_kira_audio = "0.8"
game_plugin = { path = "game_plugin" }

[workspace]
members = ["game_plugin"]

[dependencies.bevy-inspector-egui]
version = "0.8"
optional = true
